--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,8 @@ yarn-error.log*
 
 # typescript
 *.tsbuildinfo
+
+examples/storage/*.jpeg
+examples/storage/*.jpg
+examples/storage/*.png
+!examples/storage/.gitkeep
