--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/formidable": "^1.2.4",
+    "@types/http-status-codes": "^1.2.0",
+    "formidable": "^1.2.2",
+    "http-status-codes": "^2.1.4",
     "next": "12.0.1",
+    "next-connect": "^0.11.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
